#2 Add JPA Support